--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <button>Add</button>
     </form>
 
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+    <a target="_blank" href="https://github.com/SKEY-308">Severus KEY</a>
   </footer>
 
   <script src='sandbox.js'></script>
